# FlusherFinder

./: .firebaserc  .gitignore  DEPLOY-ALTERNATIVES.md  DEPLOY-FIREBASE-FRONTEND.md  DEPLOY-FIREBASE-SUPABASE.md  PROJECT_DOCUMENTATION.md  Procfile  QUICK-START.md  RAILWAY-DATABASE-SETUP.md  RAILWAY-DEPLOY-GUIDE.md  RAILWAY-ENV-VARIABLES-SETUP.md  RAILWAY-ROOT-DIRECTORY-FIX.md  RAILWAY-WASHROOM-SETUP.md  README-Docker.md  README-SETUP.md  README.md  docker-compose.yml  env.example  init-api-compatible.sql  init-simple.sql  init.sql  package-lock.json  package.json  railway-init-db.sql  railway-washroom-schema.sql  setup-database.sh  setup-railway-db.sh  start-all.sh  stop-all.sh
apps/api/: .env  .env.example  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway.Dockerfile  requirements.txt
apps/api/alembic/: 0001_init.py  alembic.ini  env.py  script.py.mako
apps/api/alembic/versions/: 022d3019d126_init_schema.py  03eb8ae3dd40_init_schema.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  base.py
apps/api/app/routers/: reviews.py  washroom.py
apps/api/src/: db.py  main.py
apps/api/src/core/: config.py  dependencies.py  security.py
apps/api/src/models/: __init__.py  amenity.py  review.py  user.py  washroom.py
apps/api/src/routers/: auth.py  init.py  reviews.py  search.py  washroom.py
apps/api/src/schemas/: review.py  user.py  washroom.py
apps/api/src/services/: geosearch.py  scoring.py
apps/api/src/washroom_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: .env  .gitignore  (+6 more)
(+29 files in other folders)
