[project]
name = "washroom-api"
version = "0.1.0"
description = "FastAPI backend for washroom finder"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "geoalchemy2>=0.15",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7"
]

[tool.uv]
index-url = "https://pypi.org/simple"
